k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    app: goserver
spec:
  selector:
    matchLabels:
      app: goserver
  replicas: 2
  template:
    metadata:
      labels:
        app: 'goserver'
    spec:
      containers:
        - name: goserver
          image: 'wesleywillians/hello-go:v5.4'
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 3
            failureThreshold: 1
            initialDelaySeconds: 10

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 5
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
            initialDelaySeconds: 15

          volumeMounts:
            - mountPath: 'go/myfamily'
              name: config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: configmap-family
            items:
              - key: members
                path: 'family.txt'
