k8s/mysql-service-h.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-h # tem q ser igual o serviceNmae do statefulset
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
  clusterIP: None
